#
# Libnotify
#
pkg_check_modules (LIBNOTIFY QUIET libnotify)
if (LIBNOTIFY_FOUND)
  message ("-- libnotify enabled")

  set (GLOBAL_VALAC_OPTIONS ${GLOBAL_VALAC_OPTIONS} --define=HAVE_LIBNOTIFY)

  set (DAEMON_PACKAGES ${CORE_PACKAGES} ${CMAKE_PROJECT_NAME} libnotify)
  set (DAEMON_CFLAGS ${CORE_CFLAGS} ${LIBNOTIFY_CFLAGS})
  set (DAEMON_LIBRARIES ${CORE_LIBRARIES} ${CORE_LIBRARY_NAME} ${LIBNOTIFY_LIBRARIES})
  set (DAEMON_LIBRARY_DIRS ${CORE_LIBRARY_DIRS} ${LIBNOTIFY_LIBRARY_DIRS})
else ()
  set (DAEMON_PACKAGES ${CORE_PACKAGES} ${CMAKE_PROJECT_NAME})
  set (DAEMON_CFLAGS ${CORE_CFLAGS})
  set (DAEMON_LIBRARIES ${CORE_LIBRARIES} ${CORE_LIBRARY_NAME})
  set (DAEMON_LIBRARY_DIRS ${CORE_LIBRARY_DIRS})
  message ("-- libnotify disabled")
endif ()

set(DAEMON_SOURCE
    Daemon.vala
)
set(DAEMON_EXEC_NAME ${CMAKE_PROJECT_NAME}-daemon)

vala_precompile(DAEMON_VALA_C ${DAEMON_EXEC_NAME}
    ${DAEMON_SOURCE}
PACKAGES
    ${DAEMON_PACKAGES}
OPTIONS
    ${GLOBAL_VALAC_OPTIONS}
)


add_definitions(${DAEMON_CFLAGS})
link_directories(${DAEMON_LIBRARY_DIRS})
add_executable(${DAEMON_EXEC_NAME} ${DAEMON_VALA_C})

target_link_libraries(${DAEMON_EXEC_NAME} ${DAEMON_LIBRARIES} -lm)

install(TARGETS ${DAEMON_EXEC_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR})